cabal-version:   3.0
name:            quicksort
version:         0.1.0.0
license:         NONE
author:          olle@form1.se
maintainer:      Olle Jernelöf
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable quicksort
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.16.4.0,
                      vector,
                      monad-loops
    hs-source-dirs:   app
    default-language: Haskell2010
