cabal-version:   3.4
name:            quicksort
version:         0.1.0.0
license:         NONE
author:          olle@form1.se
maintainer:      Olle Jernelöf
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable quicksort
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.20.0.0,
                      quicksort:lib
    hs-source-dirs:   app
    default-language: Haskell2010

library lib
    build-depends:    base ^>= 4.20.0.0,
                      vector,
                      monad-loops
    hs-source-dirs:   lib
    exposed-modules:  Data.Ord.Quicksort
    other-modules:    Control.Applicative.Bitraversable, 
                      Data.Ord.Compare,
                      Data.Vector.Mutable.Function

test-suite test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  base ^>=4.20.0.0,
                  quicksort:lib,
                  QuickCheck
  hs-source-dirs: test

